# farmrpg-etl2

./: .gitignore  Dockerfile  Makefile  README.md  manage.py  pyproject.toml
.github/workflows/: main.yaml
.gitub/workflows/: main.yaml
borgen/: admin.py  apps.py  graphql.py  models.py  parsers.py  tasks.py  tests.py
borgen/fixtures/: backfill_borgens.json
chat/: admin.py  apps.py  graphql.py  models.py  parsers.py  serailizers.py  tasks.py
chat/fixtures/: settings.html
chat/migrations/: 0001_initial.py  0003_alter_message_content.py
community_center/: admin.py  apps.py  graphql.py  graphql_extra.py  models.py  parsers.py  tasks.py  tests.py
community_center/fixtures/: comm.html  initial_community_centers.json
community_center/migrations/: 0001_initial.py
cron/: admin.py  apps.py  decorators.py  tasks.py
cron/migrations/: 0001_initial.py
etl/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
exchange_center/: admin.py  apps.py  graphql.py  graphql_extra.py  models.py  parsers.py  tasks.py  tests.py
exchange_center/fixtures/: backfill.json  exchange.html
items/: admin.py  apps.py  factories.py  graphql.py  graphql_extra.py  models.py  parser.py  parsers.py  serializers.py  tasks.py  tests.py
items/fixtures/: item_grab_bag_02.html  item_scissors.html  item_snowball.html  skill_level_rewards.json
items/migrations/: 0001_initial.py  0002_item_buy_price.py  0005_remove_item_snapshot_insert_and_more.py  0006_remove_item_snapshot_insert_and_more.py  0007_wishingwellitem_wishingwellitemevent_and_more.py  0009_alter_locksmithitem_quantity_max_and_more.py  0011_remove_item_snapshot_insert_and_more.py  0012_manual_productions.py  0013_cooking_level.py  0015_constraints.py  (+2 more)
locations/: admin.py  apps.py  drop_simulator.py  graphql.py  models.py  parser.py  tasks.py  tests.py
npcs/: admin.py  apps.py  graphql.py  models.py  parsers.py  tasks.py  tests.py
passwords/: admin.py  apps.py  graphql.py  models.py  parsers.py  tasks.py  tests.py
pbgs/: admin.py  apps.py  graphql.py  models.py  parsers.py  tasks.py  tests.py
pets/: admin.py  graphql.py  graphql_extra.py  models.py
quests/: admin.py  apps.py  graphql.py  graphql_extra.py  html_sanitizer.py  models.py  serializers.py  tasks.py  tests.py
quizzes/: admin.py  apps.py  graphql.py  models.py  tasks.py
static/: admin_custom.css
templates/: admin_tabular_inline_no_origin.html
tower/: admin.py  apps.py  graphql.py  graphql_extra.py  models.py
updates/: admin.py  apps.py  graphql.py  models.py  parsers.py  tasks.py  tests.py  views.py
users/: admin.py  apps.py  models.py  parsers.py  tasks.py
utils/: http.py  parsers.py  tasks.py
(+215 files in other folders)
