[tool.poetry]
name = "farmrpg-etl2"
version = "0.1.0"
description = ""
authors = ["Noah Kantrowitz <noah@coderanger.net>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.5"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
attrs = "^22.2.0"
structlog = "^22.3.0"
strawberry-django-plus = "^1.34"
django-debug-toolbar = "^3.8.1"
strawberry-graphql-django = "^0.8.2"
dj-database-url = "^1.2.0"
psycopg2 = "^2.9.5"
httpx = "^0.23.3"
djangorestframework = "^3.14.0"
django-pghistory = "^2.5.1"
lxml = "^4.9.2"
html5lib = "^1.1"
cssselect = "^1.2.0"
lxml-stubs = "^0.4.0"
toposort = "^1.10"
whitenoise = "^6.4.0"
beautifulsoup4 = "^4.11.2"
google-cloud-firestore = "^2.10.0"
firebase-admin = "^6.1.0"
google-cloud-iam = "^2.12.0"
async-lru = "^2.0.2"

[tool.poetry.group.dev.dependencies]
respx = "^0.20.1"
pytest = "^7.2.2"
pytest-asyncio = "^0.20.3"
pytest-django = "^4.5.2"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "etl.settings"
python_files = "tests.py test_*.py *_tests.py"
